tests/outref/TDF006.ref

-- TDF006 : OCTO595 : DROP FUNCTION IF EXISTS issues a warning when the specified function doesn't exist

CREATE FUNCTION PARMLESSFUNC() RETURNS VARCHAR AS $$^PARMLESSFUNC;
SELECT PARMLESSFUNC() FROM names LIMIT 1;
DROP FUNCTION IF EXISTS PARMLESSFUNC ();
SELECT PARMLESSFUNC() FROM names LIMIT 1;
DROP FUNCTION IF EXISTS PARMLESSFUNC ();

CREATE FUNCTION PARMFULLFUNC(NUMERIC) RETURNS NUMERIC AS $$samevalue^functions;
SELECT PARMFULLFUNC(3.14) FROM names LIMIT 1;
DROP FUNCTION IF EXISTS PARMFULLFUNC (NUMERIC);
SELECT PARMFULLFUNC(3.14) FROM names LIMIT 1;
DROP FUNCTION IF EXISTS PARMFULLFUNC (NUMERIC);

[ INFO] PATH:LINENUM DATE TIME : INFO_RECORDING_ENV_VARS : # Recording pertinent ydb_* env var values at process startup
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [CREATE FUNCTION PARMLESSFUNC() RETURNS VARCHAR AS $$^PARMLESSFUNC;]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_TEXT_REPRESENTATION : CREATE FUNCTION `PARMLESSFUNC`() RETURNS VARCHAR AS $$^PARMLESSFUNC;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [SELECT PARMLESSFUNC() FROM names LIMIT 1;]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_M_PLAN : Generating M file [$PWD/_ydboctoP*.m] (to execute SQL query)
[ INFO] PATH:LINENUM DATE TIME : INFO_ENTERING_FUNCTION : Entering print_temporary_table
PARMLESSFUNC
SUCCESS
(1 row)
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [DROP FUNCTION IF EXISTS PARMLESSFUNC ();]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'PARMLESSFUNC' defined with given parameter types (none)
Error with syntax near (line 1, column 8):

SELECT PARMLESSFUNC() FROM names LIMIT 1;
       ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT PARMLESSFUNC() FROM names LIMIT 1;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [SELECT PARMLESSFUNC() FROM names LIMIT 1;]
[ INFO] PATH:LINENUM DATE TIME : INFO_RETURNING_FAILURE : Returning failure from run_query
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [DROP FUNCTION IF EXISTS PARMLESSFUNC ();]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_FUNCTION_DOES_NOT_EXIST : Function 'PARMLESSFUNC()' does not exist, skipping
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [CREATE FUNCTION PARMFULLFUNC(NUMERIC) RETURNS NUMERIC AS $$samevalue^functions;]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_TEXT_REPRESENTATION : CREATE FUNCTION `PARMFULLFUNC`( NUMERIC) RETURNS NUMERIC AS $$samevalue^functions;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [SELECT PARMFULLFUNC(3.14) FROM names LIMIT 1;]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_M_PLAN : Generating M file [$PWD/_ydboctoP*.m] (to execute SQL query)
[ INFO] PATH:LINENUM DATE TIME : INFO_ENTERING_FUNCTION : Entering print_temporary_table
PARMFULLFUNC
3.14
(1 row)
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [DROP FUNCTION IF EXISTS PARMFULLFUNC (NUMERIC);]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'PARMFULLFUNC' defined with given parameter types (NUMERIC)
Error with syntax near (line 1, column 8):

SELECT PARMFULLFUNC(3.14) FROM names LIMIT 1;
       ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT PARMFULLFUNC(3.14) FROM names LIMIT 1;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [SELECT PARMFULLFUNC(3.14) FROM names LIMIT 1;]
[ INFO] PATH:LINENUM DATE TIME : INFO_RETURNING_FAILURE : Returning failure from run_query
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [DROP FUNCTION IF EXISTS PARMFULLFUNC (NUMERIC);]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_FUNCTION_DOES_NOT_EXIST : Function 'PARMFULLFUNC(NUMERIC)' does not exist, skipping
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command []
Exit Status: 0
Remaining function definitions (hashes):
Successfully deleted function "PARMLESSFUNC" from pg_catalog.pg_proc
Remaining function definitions (hashes):
Successfully deleted function "PARMFULLFUNC" from pg_catalog.pg_proc
